horizontal scroll issue fixed in preview page

--- a/assets/style/preview.css
+++ b/assets/style/preview.css
@@ -48,7 +48,7 @@
     cursor: url(../img/text.png),text;
   }
   .search-bar{
-    width: 666px;
+    /* width: 666px; */
     display: flex;
     border: 2px solid var(--blue);
     border-radius: 5px;
@@ -307,7 +307,7 @@
     /* box-shadow: 0 0 1px 1px #E0E0E0; */
   }
   .chart{
-    width: 1340px;
+    /* width: 1340px; */
     margin: auto;
     padding: 20px;
     display: flex;
@@ -1079,10 +1079,10 @@
     border-top: 1px solid var(--gray-300, #DEE2E7);
     background: var(--gray-200, #EFF2F4);
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
-    padding-left: 128px;
-    gap: 749px;
+    /* padding-left: 128px; */
+    /* gap: 749px; */
   }
   
   
